--- a/css/popup.css
+++ b/css/popup.css
@@ -1,199 +1,216 @@
-html{
-	padding:8px;
-	margin:0px;
-	user-select:none;
+html {
+  padding: 8px;
+  margin: 0px;
+  user-select: none;
 }
-body{
-	padding:0px;
-	margin:0px;
-	-webkit-user-select:none;
+body {
+  padding: 0px;
+  margin: 0px;
+  -webkit-user-select: none;
 }
-.window{
-	width:400px;
-	display:inline-block;
-	position:relative;
-	padding-top:10px;
-	margin-top:10px;
-	border-top:1px solid #b2b2b2;
-	vertical-align:top;
+.window {
+  width: 400px;
+  display: inline-block;
+  position: relative;
+  padding-top: 10px;
+  margin-top: 10px;
+  border-top: 1px solid #b2b2b2;
+  vertical-align: top;
 }
-.window.block{
-	border-top:none;
-	padding-top:0px;
-	margin-top:0px;
-	border-left:1px solid #b2b2b2;
-	padding-left:10px;
-	margin-left:10px;
-	width:auto;
+.window.block {
+  border-top: none;
+  padding-top: 0px;
+  margin-top: 0px;
+  border-left: 1px solid #b2b2b2;
+  padding-left: 10px;
+  margin-left: 10px;
+  width: auto;
 }
-.window:first-child{
-	padding-top:0px;
-	margin-top:0px;
-	border-top:none;
-	padding-left:0px;
-	margin-left:0px;
-	border-left:none;
+.window:first-child {
+  padding-top: 0px;
+  margin-top: 0px;
+  border-top: none;
+  padding-left: 0px;
+  margin-left: 0px;
+  border-left: none;
 }
-.icon{
-	height:20px;
-	width:20px;
-	box-sizing:border-box;
-	border:1px solid #b2b2b2;
-	padding:1px;
-	border-radius:3px;
-	background-size:16px 16px;
-	background-repeat:no-repeat;
-	background-position:center;
-	float:left;
-	margin-left:2px;
-	font-family:verdana;
-	font-size:12px;
-	user-select:none;
-	cursor:arrow;
+.window.filterbox,
+.window.searchbox {
+  background-color: white;
+  padding: 10px;
+  position: fixed;
+  left: 0px;
 }
-.icon.incognito{
-	border:1px solid #ff0000;
+.window.filterbox {
+  position: sticky;
+  top: 0px;
+  z-index: 2;
+  padding: 5px;
+  padding-left: 0;
 }
-.icon:hover{
-	border-width:2px;
-	padding:0px;
+.window.filterbox > div:first-child {
+  margin-left: 0;
 }
-.tab.selected{
-	border:2px solid #3B5686;
-	padding:0px;
+.window.searchbox {
+  bottom: 0px;
 }
-.tab.hidden{
-	display:none;
+.icon {
+  height: 20px;
+  width: 20px;
+  box-sizing: border-box;
+  border: 1px solid #b2b2b2;
+  padding: 1px;
+  border-radius: 3px;
+  background-size: 16px 16px;
+  background-repeat: no-repeat;
+  background-position: center;
+  float: left;
+  margin-left: 2px;
+  font-family: verdana;
+  font-size: 12px;
+  user-select: none;
+  cursor: pointer;
 }
-.tab{
-	float:left;
-	margin-left:2px;
-	margin-bottom:2px;
-	background-image:url(../images/generic.png);
-	position:relative;
+.icon.incognito {
+  border: 1px solid #ff0000;
 }
-.tab.full{
-	width:340px;
-	background-position:2px center;
+.icon.audible {
+  border: 1px solid green;
 }
-.tab.full > .tabtitle{
-	width:310px;
-	height:100%;
-	white-space:nowrap;
-	overflow:hidden;
+.icon:hover {
+  border-width: 2px;
+  padding: 0px;
 }
-.tab:first-child, .newliner + .icon{
-	margin-left:0px;
+.icon.tab.expanded {
+  width: 340px;
+  float: left;
+  background-position: 2px center;
+  margin-left: 0px;
+  font-family: verdana;
+  font-size: 10pt;
+  padding-left: 22px;
+  white-space: nowrap;
+  -webkit-user-select: none;
 }
-.windowaction{
-	float:right;
-	margin-right:2px;
-	margin-left:0px;
+.tab {
+  float: left;
+  margin-left: 2px;
+  margin-bottom: 2px;
+  background-image: url(../images/generic.png);
+  position: relative;
 }
-.windowaction + .enabled{
-	background-color:#DDEEEE;
+.tab.selected {
+  border: 2px solid #3B5686;
+  padding: 0px;
 }
-.add{
-	background-image:url(../images/new.png);
+.tab.hidden {
+  display: none;
 }
-.close{
-	background-image:url(../images/close.png);
+.tab.full {
+  width: 340px;
+  background-position: 2px center;
 }
-.new{
-	background-image:url(../images/new.png);
+.tab.full > .tabtitle {
+  width: 310px;
+  height: 100%;
+  white-space: nowrap;
+  overflow: hidden;
 }
-.trash{
-	background-image:url(../images/trash.png);
+.tab.left > .limiter,
+.tab.right > .limiter {
+  width: 2px;
+  height: 20px;
+  background-color: #000000;
+  margin-top: -2px;
 }
-.blocks{
-	background-image:url(../images/block.png);
+.tab.left > .limiter {
+  margin-left: -4px;
 }
-.horizontal{
-	background-image:url(../images/horizontal.png);
+.tab.right > .limiter {
+  float: right;
+  margin-right: -4px;
 }
-.vertical{
-	background-image:url(../images/vertical.png);
+.tab.top > .limiter,
+.tab.bottom > .limiter {
+  height: 2px;
+  left: 0px;
+  right: 0px;
+  position: absolute;
+  background-color: #000000;
 }
-.pin{
-	background-image:url(../images/pin.png);
+.tab.top > .limiter {
+  top: -3px;
 }
-.filter{
-	background-image:url(../images/filter.png);
+.tab.bottom > .limiter {
+  bottom: -3px;
 }
-.tab.left > .limiter, .tab.right > .limiter{
-	width:2px;
-	height:20px;
-	background-color:#000000;
-	margin-top:-2px;
-
+.tab:first-child,
+.newliner + .icon {
+  margin-left: 0px;
 }
-.tab.left > .limiter{
-	margin-left:-4px;
+.windowaction {
+  float: right;
+  margin-right: 2px;
+  margin-left: 0px;
 }
-.tab.right > .limiter{
-	float:right;
-	margin-right:-4px;
+.windowaction + .enabled {
+  background-color: #DDEEEE;
 }
-
-.tab.top > .limiter, .tab.bottom > .limiter{
-	height:2px;
-	left:0px;
-	right:0px;
-	position:absolute;
-	background-color:#000000;
-
+.add {
+  background-image: url(../images/new.png);
 }
-.tab.top > .limiter{
-	top:-3px;
+.close {
+  background-image: url(../images/close.png);
 }
-.tab.bottom > .limiter{
-	bottom:-3px;
+.new {
+  background-image: url(../images/new.png);
 }
-
-.icon.tab.expanded{
-	width:340px;
-	float:left;
-	background-position:2px center;
-	margin-left:0px;
-	font-family:verdana;
-	font-size:10pt;
-	padding-left:22px;
-	white-space:nowrap;
-
-	-webkit-user-select:none;
+.trash {
+  background-image: url(../images/trash.png);
 }
-
-.newliner{
-	clear:both;
-	margin-right:-2px;
+.blocks {
+  background-image: url(../images/block.png);
 }
-input{
-	border:1px solid #eeeeee;
-	border-radius:3px;
-	height:20px;
-	box-sizing:border-box;
-	margin-right:7px;
-	width:280px;
+.horizontal {
+  background-image: url(../images/horizontal.png);
 }
-.placeholder{
-	border-width:0px;
-	height:20px;
-	z-index:-1;
+.vertical {
+  background-image: url(../images/vertical.png);
 }
-.window.searchbox{
-	background-color:white;
-	padding:10px;
-	position:fixed;
-	bottom:0px;
-	left:0px;
+.pin {
+  background-image: url(../images/pin.png);
 }
-.infobox{
-	position:fixed;
-	font-family:Arial;
-	font-weight:bold;
-	font-size:0.5em;
-	color:#00AAFF;
-	top:3px;
-	right:8px;
-	z-index:100;
+.filter {
+  background-image: url(../images/filter.png);
 }
+.playingaudio {
+  background-image: url(../images/audible.png);
+}
+.newliner {
+  clear: both;
+  margin-right: -2px;
+}
+input {
+  border: 1px solid #eeeeee;
+  border-radius: 3px;
+  height: 20px;
+  box-sizing: border-box;
+  margin-right: 7px;
+  width: 280px;
+}
+.placeholder {
+  border-width: 0px;
+  height: 20px;
+  z-index: -1;
+}
+.infobox {
+  position: fixed;
+  font-family: Arial;
+  font-weight: bold;
+  font-size: 0.5em;
+  color: #00AAFF;
+  top: 3px;
+  right: 8px;
+  z-index: 100;
+}
+/*# sourceMappingURL=popup.css.map */
