Added tab filters (muted, audible, pinned)

--- a/css/popup.less
+++ b/css/popup.less
@@ -164,6 +164,11 @@ body{
 		background-color:#DDEEEE;
 	}
 }
+.filteraction {
+	&.active {
+		background-color: #bdffac;
+	}
+}
 .add{
 	background-image:url(../images/new.png);
 }
@@ -192,7 +197,13 @@ body{
 	background-image:url(../images/filter.png);
 }
 .playingaudio{
-	background-image:url(../images/audible.png);
+	background-image:url(../images/filter/audible.png);
+}
+.pinned{
+	background-image:url(../images/filter/pinned.png);
+}
+.muted{
+	background-image:url(../images/filter/muted.png);
 }
 
 .newliner{
