--- a/css/popup.css
+++ b/css/popup.css
@@ -156,6 +156,9 @@ body {
 .windowaction + .enabled {
   background-color: #DDEEEE;
 }
+.filteraction.active {
+  background-color: #bdffac;
+}
 .add {
   background-image: url(../images/new.png);
 }
@@ -184,7 +187,13 @@ body {
   background-image: url(../images/filter.png);
 }
 .playingaudio {
-  background-image: url(../images/audible.png);
+  background-image: url(../images/filter/audible.png);
+}
+.pinned {
+  background-image: url(../images/filter/pinned.png);
+}
+.muted {
+  background-image: url(../images/filter/muted.png);
 }
 .newliner {
   clear: both;
